tests/ui/with_no_rhs.stderr
error: Invalid syntax for #[arbitrary], `with` is missing assignment.
 --> tests/ui/with_no_rhs.rs:5:16
  |
5 |     #[arbitrary(with)]
  |                ^^^^^^
